<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_story"
            android:scaleType="centerCrop"
            tools:src="@color/green_500" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="16sp"
            tools:text="Deskripsi" />

        <TextView
            android:id="@+id/tv_created_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="13dp"
            tools:text="@string/created_add" />

    </LinearLayout>


</androidx.cardview.widget.CardView>