<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal3"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.44"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_name"
        style="@style/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:lines="1"
        android:maxLines="2"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal3"
        tools:text="Hallo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/main_picture"
        android:src="@drawable/dicoding_logo"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/continu"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_desc"
        app:layout_constraintStart_toStartOf="@+id/txt_desc"
        app:layout_constraintTop_toBottomOf="@+id/txt_desc" />

    <Button
        android:id="@+id/btn_logOut"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/red_500"
        android:text="@string/logout"
        app:cornerRadius="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_continue"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

    <TextView
        android:id="@+id/txt_desc"
        style="@style/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/home_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />


</androidx.constraintlayout.widget.ConstraintLayout>